--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel src -d dist && nodemon dist/index.js"
+    "start": "babel src -d dist && nodem dist/index.js",
+    "dev": "babel src -d dist && nodemon dist/index.js"
   },
   "author": "amymc",
   "license": "ISC",
