--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel src -d dist && node dist/index.js",
+    "start": "node dist/index.js",
+    "build": "babel src -d dist",
     "dev": "babel src -d dist && nodemon dist/index.js"
   },
   "author": "amymc",
   "license": "ISC",
   "dependencies": {
-    "babel": "^6.23.0",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-preset-es2015": "^6.24.1",
+    "auth0-api-jwt-rsa-validation": "0.0.1",
+    "babel-cli": "^6.26.0",
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "express-jwt": "^5.3.0",
+    "jsonwebtoken": "^7.4.3",
     "mongoose": "^4.11.4"
+  },
+  "devDependencies": {
+    "babel-preset-env": "^1.6.0",
+    "morgan": "^1.8.2",
+    "nodemon": "^1.12.0"
   }
 }
